# pyVIN

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docker.yml  release.yml
.streamlit/: config.toml
src/: config.py  exceptions.py
src/api/: __init__.py  client.py  models.py
src/formatting/: __init__.py  fields.py  response.py
src/logs/: __init__.py  logs.py
src/ui/: Home.py  app.py
src/ui/components/: results_table.py
src/ui/pages/: VIN_Decoder.py  decode.py
src/validation/: __init__.py  vin.py
tests/: conftest.py
tests/test_api/: test_client.py  test_models.py
tests/test_formatting/: test_fields.py  test_response.py
tests/test_logs/: test_logs.py
tests/test_validation/: test_vin.py
